--- a/project1.Rmd
+++ b/project1.Rmd
@@ -41,17 +41,19 @@ In addition to those packages, I used the following packages in the rest of the 
 * `lubriate`: consistent and memorable syntax that makes working with dates easy and fun
 * `janitor`: simple functions for examining and cleaning dirty data
 
-# Intro
+# 1 Introduction
 
-This project was super fun, I had no idea what to expect when starting it, but as I immeresed myself in the world of API's, I became enthralled with the data I was compliling.  
+This project was super fun, I had no idea what to expect when starting it, but as I immersed myself in the world of API's, I became enthralled with the data I was compiling.  I ended up using the NASA Near Earth Object Web Service.  The API i called was very limited in its search parameters (only three, start date, end date, and API key).  Additionally, the API only allows you to pull seven days per call.  All that being said, it did return a lot of interesting information which I was able to wrangle into some useful tables and visualizations.
+
+The crux of the analysis speaks to how much damage and asteroid could do to the earth, and if asterorids are potentially hazardous.  All that being said, based on some of the date ranges are pulled, I think we'll be okay.
 
 ```{R, echo=FALSE, eval=TRUE}
 knitr::include_graphics("_pics/asteroid.PNG")
 ```
 
-# Functions to contact API and inspect data
+# 2 Function to contact API and Inspect the Data
 
-The function below is used to query the NASA NEO API.
+The `asteroidcall` function below is used to query the NASA NEO API.  As mentioned above, it only accepts three parameters (start_date, end_date, and api_key).  Given a `demo_key` can be used for the API, the user only needs to enter the start and end dates of the seven day period they would like to pull data from.
 
 
 ``` {r}
@@ -67,9 +69,9 @@ asteroidcall <- function(start_date, end_date){GET(url = "https://api.nasa.gov/n
 asteroidcall("1998-09-27", "1998-10-02")
 ```
 
-# Converting asteroid data in the API Call to Tibble
+## 2.1 Converting thedata in the API Call to Tibble
 
-Taking the asteroid data and compiling it into one dataframe/tibble.  API call retuns one dataframe per date, need to combine into one tibble., adding date column and removing neo_ID, url, and list.  Adding date of observation column
+It is a fairly laborious process to get the data from the API call into a usable data frame/tibble.  Each day queried returns its own data frame.  This requires all the data frames being combined into one.  Luckily the columns are all the same.  Once the `JSON` conversion is complete, `do.call` is required to combine all the data frames into one.  There are three columns which are not usable or of value so the `subset()` function was used to remove them.  The final step was ordering the columns into something a bit more user friendly.
 
 ```{r asteroid data, echo=TRUE, eval=TRUE}
 asteroiddata = fromJSON(rawToChar(asteroid$content), flatten = TRUE)
@@ -79,10 +81,9 @@ asteroiddata2 <- asteroiddata2[ ,c(1,2,5,4,6,7,8,9,10,11,12,13,14,3)]
 ```
 
 
-# trasformation of asteroid dataset
+## 2.2 Renaming the Columns
 
-## rename columns
-xxxx
+At this point, we have a usable data frame to start cleaning up a bit more.  Some of the columne names were a bit long, so the following code was used to turn them into something a little more readable.
 
 ```{r rename columns, r asteroid data, echo=TRUE, eval=TRUE, error=FALSE, message=FALSE}
 asteroiddata2 <- as_tibble(plyr::rename(asteroiddata2, c(
@@ -102,9 +103,9 @@ asteroiddata2 <- as_tibble(plyr::rename(asteroiddata2, c(
 ```
 
 
-## adding levels to  the tibble
+## 2.3 Adding levels to Two Columns
 
-xxxx
+Two of the columns returned true/false values, so changing those to names that were easier to understand the context was done in this step.  This enabled a better understanding of the visualizations further down in the project.
 
 ```{r, eval=TRUE, echo=TRUE}
 asteroiddata2$potentially_hazardous <- as.factor(asteroiddata2$potentially_hazardous)
@@ -114,9 +115,9 @@ asteroiddata2$sentry_object <- as.factor(asteroiddata2$sentry_object)
 ```
 
 
-## adding new column damage est
+## 2.4 Adding first new variable - `damage est`
 
-create new variable
+A number of the columns in the data frame give information on the estimated size of the asteroids returned in the API call.  I was able to find some information which provided the level of damage an asteroid could do to Earth if it were to impact the planet based on its diameter in meters.  The code below created a new categorical variable and applies the different damage classifications based on the diameter of the asteroid in meters.
 
 ```{r, eval=TRUE, echo=TRUE}
 asteroiddata2 <- asteroiddata2 %>% 
@@ -128,27 +129,29 @@ asteroiddata2 <- asteroiddata2 %>%
                                                                                         if_else(asteroiddata2$est_diameter_meter_max <= 10000, "Large Global Effect", "Extinction Event",)))))))
 ```
 
-## adding new variable showig range between max a min diameter in meters
+## 2.5  Adding second new variable `diameter range`
 
-xxxx
+A second new variable was added to the data frame.  The data provided by the API gives an estimated maximum diameter in meters and an estimated minimum in meters.  This new variable provides the range between the max and min estimate, for comparison, and to see how distant some of the estimations are.
 
 ```{r, eval=TRUE, echo=TRUE}
 asteroiddata2 <- as_tibble(asteroiddata2)%>% mutate(diameter_range = asteroiddata2$est_diameter_meter_max - asteroiddata2$est_diameter_meter_min)
 ```
 
 
-### tibble after data wrangling
+## 2.6 The final tibble after data wrangling
 
-And here we are, after all that wrangling, a readable and useful tibble to work with!
+And here we are, after all the wrangling we end up with a useful tibble to base our analysis from and work with!
 
 ```{r, eval=TRUE, echo=TRUE}
 asteroiddata2
 ```
 
 
-## 2nd endpoint call
+# 3 Second API Endpoint Call
 
-asteroids removed from the sentry list
+Given some of the limitations as stated above with the search parameters I did see if there was another relevant API to query.  I did come across one administered by the Jet Propulsion Laboratory.  This one enabled me to pull a list of asteroids that have been removed from the NASA Sentry List.  The Sentry List identifies all asteroids which pose a somewhat relevant threat to Earth.  There were no parameters to specifically query for this API, other than to see what asteroids were removed from the list.
+
+This data was tricky to work with, so I had to `unlist()` and repackage it into a tibble.  Once that was complete, I renamed the column headers to mirror the tibble from the NEO API call.  
 
 
 ```{r API call asteroid browse api, echo=TRUE, eval=TRUE, message=FALSE, error=FALSE, warning=FALSE}
@@ -164,20 +167,20 @@ removedsentry <- as_tibble(plyr::rename(removedsentry, c("2836" = "Asteroid_Name
   "NASA/JPL Sentry Data API" = "Date_Removed")))
 ```
 
-# table join
+# 3.1 Table join
 
-This new table now shows is an asteroid may be been previously captured on the NASA Sentry List and combines the tables from the two endpoints above.
+With the headers from the second API call updated, I was able to join the tibbles from the first and second API calls using a `left_join()`.  This enabled the addition of a column to see if any of the asteroids in the tibble were previously on the Senty List and what date they were removed.  This provided a nice addition to data, given the NEO API already provides a column stating if the asteroid is currently on the Sentry list.  The Tibble below is the final tibble to start conducting analysis from for the rest of the project.
 
 ```{r, echo=TRUE, eval=TRUE}
 asteroiddata3 <- left_join(asteroiddata2, removedsentry, by = "Asteroid_Name")
 asteroiddata3
 ```
 
-# contingeny tables
+# 4 Contingeny Tables
 
-## two-way contingency tables
+## 4.1 Two-way Contingency Tables
 
-says that of the hazardous observed during the seven day timeframe 4 asteroids would result in a low global effect if they impacted earth where 2 would result in a regional event if they impacted earth.
+The two-way contingency table below shows the count of asteroids that are potentially hazardous vs. no potentially hazardous and the damage they could inflict if they were to impact the Earth.  For this timeframe, there were two that were potentially hazardous that would have resulted in a Medium Global event.
 
 ```{r, eval=TRUE, echo=TRUE}
 knitr::kable(table(asteroiddata3$damage_est, asteroiddata2$potentially_hazardous),
@@ -185,17 +188,17 @@ knitr::kable(table(asteroiddata3$damage_est, asteroiddata2$potentially_hazardous
 ```
 
 
-## three way contingency table
+## 4.2 Three-Way Contingency Table
 
-None of the observed asteroids on listed on NASA/JPLs Sentry Impact prediction system indicating an impact is likely.
+The three-way contingency table below takes what was provided above in the two-way table and further categorizes based on if the asteroids were on the Sentry list or not.  As a reminder, the Sentry list are the asteroids NASA is keeping a close watch on.  Luckily none of them were!
 
 ```{r, eval=TRUE, echo=TRUE}
 table(asteroiddata3$damage_est, asteroiddata2$potentially_hazardous, asteroiddata2$sentry_object)
 ```
 
-## summary statistics
+#5 Summary Statistics
 
-xxxxx
+The function below was written to provide summary statistics for the estimated asteroid diameters in the table.  The user can specify if they want to see summaries for Kilometers, Meters, Miles, or Feet.  I made a few attempts to try and simplify the function parameters, but ultimately the tibble object and associated column name need to be used for the function to work properly.
 
 ```{r summary asteroid2 data, echo=TRUE, eval=TRUE, message=FALSE, error=FALSE, warning=FALSE}
 astsumcall <- function(x){asteroiddata3 %>%
@@ -218,59 +221,49 @@ knitr::kable(asteroidstats,
 
 ```
 
-# Visualisations
+#6 Visualisations
 
-## Boxplotes grouped by hazardous, non hazardous
+##6.1 Boxplotes grouped by hazardous, non hazardous
+
+This plot shows the box plots for estimated maximum diameter in meters and groups them by whether or not the asteroids are hazardous.
 
 ```{r , echo=TRUE, eval=TRUE, message=FALSE, error=FALSE, warning=FALSE}
-BPH <- ggplot(data = asteroiddata3, aes(x = potentially_hazardous, y = est_diameter_meter_max)) + geom_boxplot() + geom_point(aes(color = potentially_hazardous), position = "jitter") + labs(y = "Max_Diameter_km", title="Boxplot for Size in Meters Grouped by Hazard Rating") 
+BPH <- ggplot(data = asteroiddata3, aes(x = potentially_hazardous, y = est_diameter_meter_max)) + geom_boxplot() + geom_point(aes(color = potentially_hazardous), position = "jitter") + labs(y = "Max_Diameter_km", title="Boxplot for Diameter in Meters Grouped by Hazard Category") 
 BPH
 ```
 
 
-## Boxplot size of asteroids grouped by hazard status
+##6.2 Boxplot size of asteroids grouped by Damage Potential
 
-xxxx
+Another boxplot was created this time grouping the size of the asteroids by the damage they could inflict if they impacted Earth.
 
 ```{r, echo=TRUE, eval=TRUE}
-BPH <- ggplot(data = asteroiddata3, aes(x = damage_est, y = est_diameter_meter_max)) + geom_point(aes(color = damage_est), position = "jitter") + geom_boxplot() + labs(x = "Damage Potential", y = "Max_Diameter_Meters", title="Boxplot for Size in Meters Grouped by Damage Potential") + guides(x=guide_axis(angle=45))
+BPH <- ggplot(data = asteroiddata3, aes(x = damage_est, y = est_diameter_meter_max)) + geom_point(aes(color = damage_est), position = "jitter") + geom_boxplot() + labs(x = "Damage Potential", y = "Max_Diameter_Meters", title="Boxplot for Diameter in Meters Grouped by Damage Potential") + guides(x=guide_axis(angle=45))
 BPH
 ```
 
 
-## Bar chart showing grouping of damag potetial observed
+##6.3 Bar chart showing grouping of damag potetial observed
 
-xxx
+The bar chart shows the count of asteroids categorized by the damage they could inflict if they impacted Earth and if they are considered potentially hazardous.
 
 ```{r, echo=TRUE, eval=TRUE}
 BCD <- ggplot(data = asteroiddata3, aes(y = damage_est)) + geom_bar(aes(fill = as.factor(potentially_hazardous)), position = "dodge") + labs(y = "Damage Potential") + scale_fill_discrete(name = "") + guides(y=guide_axis(angle=45))
 BCD
 ```
 
-## visualization
+##6.4 Scatterplot Hazard and Damage Potential
 
-xxxx
-
-```{r, eval=TRUE, echo=TRUE}
-BCP <- ggplot(data = asteroiddata3, aes(y = est_diameter_meter_max, x = damage_est)) + geom_count(alpha = .75, color = 'darkblue') + labs(y = "Estimated Diameter in Meters") + guides(x=guide_axis(angle=45))
-BCP
-```
-
-## scatterplot
-
-xxxx
+The scatter plot shows the clustering of asteroids by whether they are hazardous and the damage they could inflict if they impacted Earth.
 
 ```{r, echo=TRUE, eval=TRUE}
-ASCT <- ggplot(data = asteroiddata3, aes(y = potentially_hazardous, x = damage_est)) + geom_jitter(aes(alpha = .75, color = damage_est)) + labs(y = "Estimated Diameter in Meters") + guides(x=guide_axis(angle=45))
+ASCT <- ggplot(data = asteroiddata3, aes(y = potentially_hazardous, x = damage_est)) + geom_jitter(aes(color = damage_est)) + guides(x=guide_axis(angle=45))
 ASCT
 ```
 
+#6.5 Correlation Size and Magnitude
 
-
-
-# correlation
-
-Inverse realationship, as the asteroid gets larger the magnitude gets smaller.  The lower the magnitude the birghter the object.  This suggests the larger an asteroid the brighter it is.  This also shows of the observed asteroids in the timeframe.  The more luminous an object, the smaller the numerical value of its magnitude.
+This chart examines the correlation between an asteroids size and its brightness.  NASA and JPL use the term `absolute magnitude` to determine how bright a celestial object is.  The lower the magnitude, the brighter the object, or put another way, the more luminous an object, the smaller the numerical value of its magnitude.  The chart below shows the larger an asteroid is, the brighter it is.  Looking at some research online, this makes sense, and probably also explains why other planets in the solar system look like really bright stars when we can see them in the sky at night.
 
 ```{r, echo=TRUE, eval=TRUE, warning=FALSE, error=FALSE}
 CDRE <- ggplot(data = asteroiddata3, aes(y = magnitude, x = est_diameter_meter_max)) + geom_point(aes(color = magnitude), position = "jitter") + geom_smooth(formula = y ~ x, method = "loess") + labs(x = "Asteroid Diameter in Meters", y = "Magnitude", title="Asteroid Diameter vs Magnitude") 
